implemented sentimenting the termed messages of trollbox

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 es.host=search-crypto-fx5pkbp4h24z56ubckwt42csca.eu-central-1.es.amazonaws.com
+
+executor.queue.capacity=100
+executor.pool.size.core=300
+executor.pool.size.max=300
