made configurable ingested topics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ es.host=search-crypto-fx5pkbp4h24z56ubckwt42csca.eu-central-1.es.amazonaws.com
 executor.queue.capacity=100
 executor.pool.size.core=300
 executor.pool.size.max=300
+
+ingest.ticker=false
+ingest.trollbox=true
