fixed threading problem that caused that only one subscriber could persist results to elasticsearch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ executor.queue.capacity=100
 executor.pool.size.core=300
 executor.pool.size.max=300
 
-ingest.ticker=false
+ingest.ticker=true
 ingest.trollbox=true
