--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-es.host=search-crypto-fx5pkbp4h24z56ubckwt42csca.eu-central-1.es.amazonaws.com
+es.host=ES_HOST
 
 executor.queue.capacity=100
 executor.pool.size.core=300
