--- a/pom.xml
+++ b/pom.xml
@@ -60,10 +60,21 @@
             <version>2.2</version>
         </dependency>
 
+        <!-- twitter4j -->
         <dependency>
-            <groupId>com.twitter</groupId>
-            <artifactId>hbc-twitter4j</artifactId>
-            <version>2.2.0</version>
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-core</artifactId>
+            <version>[4.0,)</version>
+        </dependency>
+        <dependency>
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-stream</artifactId>
+            <version>4.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-httpclient-support</artifactId>
+            <version>2.2.6</version>
         </dependency>
 
         <dependency>
