--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ ingest.ticker=true
 ingest.trollbox=true
 ingest.twitter=true
 
+ingest.trollbox.keepText=false
+
 twitter.oauth.consumer.key=CONSUMER KEY
 twitter.oauth.consumer.secret=CONSUMER SECRET
 twitter.oauth.access.token=TOKEN
