added required properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,11 @@ executor.pool.size.core=300
 executor.pool.size.max=300
 
 ingest.ticker=true
+ingest.ticker.candlestick.size=5
+ingest.ticker.candlestick.unit=MINUTES
 ingest.trollbox=true
-ingest.twitter=true
-
 ingest.trollbox.keepText=false
+ingest.twitter=true
 
 twitter.oauth.consumer.key=CONSUMER KEY
 twitter.oauth.consumer.secret=CONSUMER SECRET
